@@ -4546,6 +4546,12 @@
           </TD>
         </TR>
         <TR>
+          <TD class="scriptcommand">CalibrateHighFocusMag</TD>
+          <TD>Runs the <a href="menu_calibration.htm#hid_calibration_high_defocus">High-Defocus Mag Calibration</a>
+            routine and stops the script if the routine returns after anything except the acceptance of
+            the calibration as good.&nbsp; Command added in 4.2, 27-Apr-24.</TD>
+        </TR>
+        <TR>
           <TD class="scriptcommand">FindPixelSize</TD>
           <TD>Runs the routine to find the pixel size in an image of a cross-line grating.&nbsp; If
              buffer A contains a montage center and B has a montage overview, B will be copied to A 
