@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+4/27/24: Added script command to run Calibrate High-DeFocus Mag routine.
+
 4/26/24: Added argument to ParamSetToUseForMontage to apply it to next montage
 opened through script.
 
